# phoenix-office

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/: copilot-instructions.md  pull_request_template.md
examples/: README.md
scripts/: check_pr_body_sections.py  check_project_state_entry.py
tests/: test_check_pr_body_sections.py  test_check_project_state_entry.py  test_cli.py  test_cli_codex_handoff.py  test_cli_codex_invocation_preflight.py  test_cli_codex_invocation_request.py  test_cli_codex_pilot_authorization.py  test_cli_codex_pilot_evidence.py  test_cli_codex_pilot_fingerprint.py  test_cli_codex_pilot_preflight.py  test_cli_codex_runtime_probe.py  test_cli_orchestration_help.py  test_cli_orchestration_non_execution_surface.py  test_cli_orchestration_plan_inspect.py  test_cli_orchestration_preflight_inspect.py  test_cli_orchestration_review_inspect.py  test_cli_proposal_draft_json.py  test_cli_proposal_generate_from_intake.py  test_cli_proposal_inspect.py  test_cli_proposal_intake_inspect.py  test_cli_proposal_intake_normalize.py  test_cli_proposal_intake_readiness.py  test_cli_proposal_intake_validate.py  test_cli_proposal_intake_workflow.py  test_cli_proposal_readiness.py  test_cli_proposal_template_readiness.py  test_cli_proposal_validate.py  test_cli_records_export.py  test_cli_records_import.py  test_cli_records_list.py  test_cli_records_proposal_details_validate.py  test_cli_records_proposal_input.py  test_cli_records_proposal_workflow.py  test_cli_records_proposal_workflow_sample_north_prairie.py  test_cli_records_show.py  (+41 more)
(+133 files in other folders)
