[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "phoenix-office"
version = "0.1.0"
description = "Phoenix Office — contractor office automation plugin"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "python-docx>=1.1",
]

[project.scripts]
phoenix-office = "phoenix_office.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.3",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 99
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
