[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "phoenix-office"
version = "0.1.0"
description = "Phoenix Office — contractor office automation plugin"
requires-python = ">=3.12"
dependencies = [
    "phoenix-sdk @ git+https://github.com/Phoenix-AI-Platform/phoenix-sdk.git@972770eb68d51a4f476bb03d67b1dab56f5b8b5c",
    "pydantic>=2.0",
    "python-docx>=1.1",
]

[project.scripts]
phoenix-office = "phoenix_office.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.3",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 99
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
